RESOLVED FIXED 206353
[GTK][WPE] Composition underline color is not applied
https://bugs.webkit.org/show_bug.cgi?id=206353
Summary [GTK][WPE] Composition underline color is not applied
Carlos Garcia Campos
Reported 2020-01-16 06:40:49 PST
The right color is received by InlineTextBox::paintCompositionUnderline(), but for some reason colorByApplyingColorFilter() always returns a null color for any given color.
Attachments
Patch (1.86 KB, patch)
2020-01-17 01:40 PST, Carlos Garcia Campos
svillar: review+
Carlos Garcia Campos
Comment 1 2020-01-17 01:38:14 PST
The problem was not colorByApplyingColorFilter(), I assumed that was called with the given color, but that's not the case because underline.compositionUnderlineColor is always CompositionUnderlineColor::TextColor. This is because compositionUnderlineColor is not encoded/decoded in the IPC messages.
Carlos Garcia Campos
Comment 2 2020-01-17 01:40:22 PST
Sergio Villar Senin
Comment 3 2020-01-17 02:22:03 PST
Comment on attachment 388023 [details] Patch Don't we have tests for this?
Carlos Garcia Campos
Comment 4 2020-01-17 02:55:07 PST
Unit tests, but it's not easy to test that the color passed from the API is the actual color of the underline when composing.
Carlos Garcia Campos
Comment 5 2020-01-17 06:00:49 PST
Note You need to log in before you can comment on or make changes to this bug.