[GTK][WPE] Composition underline color is not applied https://bugs.webkit.org/show_bug.cgi?id=206353

Reviewed by Sergio Villar Senin.

CompositionUnderline::compositionUnderlineColor is not encoded/decoded in IPC messages, so the web process
always uses CompositionUnderlineColor::TextColor ignoring the given color.

* Shared/WebCoreArgumentCoders.cpp:
(IPC::ArgumentCoder<CompositionUnderline>::encode): Encode compositionUnderlineColor.
(IPC::ArgumentCoder<CompositionUnderline>::decode): Decode compositionUnderlineColor.

Canonical link: https://commits.webkit.org/219488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254742 268f45cc-cd09-0410-ab3c-d52691b4dbfc